# Not_A_Game

./: .gitignore  README.md
NotAGame_mac/NotAGame_mac.xcodeproj/: project.pbxproj
NotAGame_mac/NotAGame_mac.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
NotAGame_mac/NotAGame_mac.xcodeproj/project.xcworkspace/xcuserdata/huangwencan.xcuserdatad/: UserInterfaceState.xcuserstate
NotAGame_mac/NotAGame_mac.xcodeproj/xcuserdata/huangwencan.xcuserdatad/xcschemes/: NotAGame_mac.xcscheme  xcschememanagement.plist
framework/: CMakeLists.txt  build.ps1  run.ps1
framework/OpenGL/: assimp-vc140-mt.exp
framework/OpenGL/Libs/: freetyped.lib  glfw3.lib
framework/Resource/Model/SKgan/:  SK.mtl  SK.mtl
framework/Resource/Model/car/: file.mtl
framework/Resource/Shader/: bullet.fs  bullet.vs  colors.fs  crystal.fs  crystal.gs  crystal.tcs  crystal.tes  crystal.vs  debugD.fs  gan.fs  gan.vs  grass.fs  grass.vs  ground.fs  ground.vs  lamp.fs  lamp.vs  material.fs  material.vs  model.fs  model.gs  model.vs  particle.fs  particle.gs  particle.vs  platform.fs  platform.vs  reflect.fs  reflect.vs  render.fs  render.vs  room.fs  room.vs  skybox.fs  skybox.vs  test.fs  test.vs  testparticle.fs  testparticle.vs  tmp.fs  (+4 more)
framework/src/: Camera.cpp  Crystal.cpp  Mesh.cpp  Model.cpp  PhsicsEngine.cpp  Render.cpp  Room.cpp  Shader.cpp  Texture.cpp  config.cpp  main.bak  main.cpp  pointShadow.cpp  util.cpp
framework/src/Header/: Bullet.h  Camera.h  Crystal.h  Font.h  Gan.h  Ground.h  Mesh.h  Model.h  ParticleSystem.h  PhysicsEngine.h  Render.h  Room.h  Shader.h  Texture.h  UI.h  config.h  particles.h  pointShadow.h  skybox.h  util.h
